--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-original_html = """<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -418,4 +418,4 @@ My heart is forever yours 💖`;
     };
   </script>
 </body>
-</html>"""
+</html>
