--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,7 +21,7 @@
     }
 
     h1 {
-      font-family: 'Pacifico', cursive;
+      font-family: 'Alex Brush', Alex Brush;
       font-size: 4rem;
       margin: 0.5rem 0;
       animation: fadeInDown 1.5s ease-out;
@@ -53,17 +52,17 @@
       text-align: center;
     }
 
-    .floating-heart {
-      position: absolute;
-      width: 30px;
-      height: 30px;
-      background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png') no-repeat center center / contain;
-      animation: floatHeart 10s linear infinite;
-      opacity: 0.7;
+    .button-row {
+      display: flex;
+      justify-content: space-between;
+      gap: 2rem;
+      width: 100%;
+      max-width: 500px;
+      margin-top: 2rem;
     }
 
-    .gift-button {
-      margin-top: 2rem;
+    .gift-button,
+    .heart-button {
       padding: 1rem 2rem;
       font-size: 1.2rem;
       font-weight: bold;
@@ -75,7 +74,12 @@
       transition: transform 0.2s;
     }
 
-    .gift-button:hover {
+    .heart-button {
+      color: #c2185b;
+    }
+
+    .gift-button:hover,
+    .heart-button:hover {
       transform: scale(1.1);
     }
 
@@ -99,11 +103,10 @@
 
     .gift-popup h2 {
       color: #d32f2f;
-      font-family: 'Pacifico', cursive;
+      font-family: 'Alex Brush', Alex Brush;
       font-size: 2rem;
       margin-bottom: 1.5rem;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
-      user-select: none;
     }
 
     .envelope {
@@ -146,9 +149,7 @@
       justify-content: center;
       font-size: 5rem;
       color: #d32f2f;
-      user-select: none;
       transform-origin: top center;
-      box-shadow: 0 0 10px #ff4d4daa;
       position: relative;
       z-index: 2;
     }
@@ -160,9 +161,6 @@
       left: 50%;
       transform: translateX(-50%);
       font-size: 4.5rem;
-      pointer-events: none;
-      user-select: none;
-      filter: drop-shadow(0 0 2px #d32f2f);
     }
 
     .envelope-back {
@@ -253,12 +251,15 @@
       border-radius: 10px;
       cursor: pointer;
       font-weight: bold;
-      user-select: none;
-      transition: background-color 0.3s;
     }
 
-    .close-button:hover {
-      background-color: #b02626;
+    .floating-heart {
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png') no-repeat center center / contain;
+      animation: floatHeart 10s linear infinite;
+      opacity: 0.7;
     }
 
     @keyframes floatHeart {
@@ -296,17 +297,23 @@
     <p>Thank you for always being there with your happiness and beauty.</p>
     <p>You’re always in the center of my heart, you’re the girl I am always thinking of, you're the girl of my dreams</p>
     <p>I made this little website just to show how much I love and respect you! 💐</p>
-    <button class="gift-button" onclick="showGift()">Gift for you 💖</button>
+
+    <div class="button-row">
+      <button class="gift-button" onclick="showGift()">Gift for you 💖</button>
+      <button class="heart-button" onclick="showHeart()">From My Heart 💭</button>
+    </div>
   </div>
 
   <div id="cardContainer" class="card-container"></div>
 
+  <!-- Floating hearts -->
   <div class="floating-heart" style="left: 10%; animation-delay: 0s;"></div>
   <div class="floating-heart" style="left: 35%; animation-delay: 1s;"></div>
   <div class="floating-heart" style="left: 55%; animation-delay: 2s;"></div>
   <div class="floating-heart" style="left: 75%; animation-delay: 3s;"></div>
   <div class="floating-heart" style="left: 25%; animation-delay: 4s;"></div>
 
+  <!-- Gift popup -->
   <div id="giftPopup" class="gift-popup">
     <h2>A gift for u alq 🌹</h2>
     <div class="envelope" id="envelope">
@@ -319,65 +326,30 @@
     <button class="close-button" onclick="closeGift()">Close</button>
   </div>
 
+  <!-- Heart popup -->
+  <div id="heartPopup" class="gift-popup">
+    <h2>From My Heart 💭</h2>
+    <div class="envelope" id="envelope2">
+      <div class="envelope-inner">
+        <div class="envelope-front"></div>
+        <div class="envelope-back"></div>
+      </div>
+    </div>
+    <div id="letter2" class="letter" style="display:none;"></div>
+    <button class="close-button" onclick="closeHeart()">Close</button>
+  </div>
+
   <script>
-    const envelope = document.getElementById('envelope');
-    const giftPopup = document.getElementById('giftPopup');
-    const letter = document.getElementById('letter');
-    let isOpen = false;
-
-    const letterText = `Dear Alq 🌹,
-
-I may not be the best guy, but I will try to improve myself in the right way.
-Even if you don’t want to be my girlfriend, I will always be glad I told you this.
-I like you more than words can say.
-My heart is forever yours 💖`;
-
-    function showGift() {
-      giftPopup.style.display = 'block';
-      isOpen = false;
-      letter.style.display = 'none';
-      letter.textContent = '';
-      envelope.classList.remove('open');
-    }
-
-    envelope.addEventListener('click', () => {
-      if (isOpen) return;
-      isOpen = true;
-      envelope.classList.add('open');
-      typeLetter(letterText);
-    });
-
-    function closeGift() {
-      giftPopup.style.display = 'none';
-      isOpen = false;
-      letter.textContent = '';
-      envelope.classList.remove('open');
-    }
-
-    function typeLetter(text) {
-      letter.style.display = 'block';
-      let i = 0;
-      letter.textContent = '';
-      function typing() {
-        if (i < text.length) {
-          letter.textContent += text.charAt(i);
-          i++;
-          setTimeout(typing, 40);
-        }
-      }
-      typing();
-    }
-
-    // Flip card logic
     const cardContainer = document.getElementById('cardContainer');
     const cardMessages = [
       "You make me laugh",
-      "You're my home",
+      "You're pretty/cute/hot",
       "You light up my world",
-      "You’re everything I ever wanted",
-      "Your smile is my favorite thing",
-      "You're magic",
-      "You’re my sunshine",
+      "You’re my dream",
+      "Your eyes are gorgeous",
+      "You make me forget my worries",
+      "I am feeling lucky to have met you",
+      "Your height doesn’t matter, only your heart 💖"
     ];
 
     function shuffle(array) {
@@ -416,6 +388,81 @@ My heart is forever yours 💖`;
         cardContainer.appendChild(createCard(msg));
       });
     };
+
+    const envelope = document.getElementById('envelope');
+    const envelope2 = document.getElementById('envelope2');
+    const giftPopup = document.getElementById('giftPopup');
+    const heartPopup = document.getElementById('heartPopup');
+    const letter = document.getElementById('letter');
+    const letter2 = document.getElementById('letter2');
+
+    let isOpen = false;
+    let isHeartOpen = false;
+
+    const letterText = `Dear Alq 🌹,
+
+I may not be the best guy, but I will try to improve myself in the right way.
+Even if you don’t want to be my girlfriend, I will always be glad I told you this.
+I like you more than words can say.
+My heart is forever yours 💖`;
+
+    const heartText = `from when my friend from 7th grade talked to you he told me about you,
+  i started paying more attention to you and then i realized that you are way more beautiful than i expected.
+  So even if you dont like me back i wanted to point that out.💭💌`;
+
+    function showGift() {
+      giftPopup.style.display = 'block';
+      isOpen = false;
+      letter.style.display = 'none';
+      letter.textContent = '';
+      envelope.classList.remove('open');
+    }
+
+    function showHeart() {
+      heartPopup.style.display = 'block';
+      isHeartOpen = false;
+      letter2.style.display = 'none';
+      letter2.textContent = '';
+      envelope2.classList.remove('open');
+    }
+
+    function closeGift() {
+      giftPopup.style.display = 'none';
+      isOpen = false;
+    }
+
+    function closeHeart() {
+      heartPopup.style.display = 'none';
+      isHeartOpen = false;
+    }
+
+    envelope.addEventListener('click', () => {
+      if (isOpen) return;
+      isOpen = true;
+      envelope.classList.add('open');
+      typeLetter(letter, letterText);
+    });
+
+    envelope2.addEventListener('click', () => {
+      if (isHeartOpen) return;
+      isHeartOpen = true;
+      envelope2.classList.add('open');
+      typeLetter(letter2, heartText);
+    });
+
+    function typeLetter(target, text) {
+      target.style.display = 'block';
+      let i = 0;
+      target.textContent = '';
+      function typing() {
+        if (i < text.length) {
+          target.textContent += text.charAt(i);
+          i++;
+          setTimeout(typing, 40);
+        }
+      }
+      typing();
+    }
   </script>
 </body>
 </html>
